2013-12-03  Jeff Law  <law@redhat.com>

	PR tree-optimization/45685
	* gcc.dg/tree-ssa/pr45685.c: New test.

2013-12-13  Bin Cheng  <bin.cheng@arm.com>

	PR tree-optimization/58296
	PR tree-optimization/41488
	* gcc.dg/tree-ssa/scev-7.c: New test.
	* gcc.dg/pr41488.c: New test.
	* g++.dg/pr59445.C: New test.

2013-12-12  Tobias Burnus  <burnus@net-b.de>

	PR fortran/59440
	* gfortran.dg/namelist_83.f90: New.
	* gfortran.dg/namelist_83_2.f90: New.

2013-12-12  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/59470
	* g++.dg/opt/pr59470.C: New test.

2013-12-12  Max Ostapenko  <m.ostapenko@partner.samsung.com>

	* c-c++-common/tsan/free_race2.c: New file.
	* c-c++-common/tsan/race_on_barrier2.c: Likewise.
	* c-c++-common/tsan/race_on_mutex.c: Likewise.
	* c-c++-common/tsan/race_on_mutex2.c: Likewise.
	* c-c++-common/tsan/simple_race.c: Likewise.
	* c-c++-common/tsan/simple_stack.c: Likewise.
	* g++.dg/tsan/aligned_vs_unaligned_race.C: Likewise.
	* g++.dg/tsan/atomic_free.C: Likewise.
	* g++.dg/tsan/atomic_free2.C: Likewise.
	* g++.dg/tsan/benign_race.C: Likewise.
	* g++.dg/tsan/cond_race.C: Likewise.
	* g++.dg/tsan/default_options.C: Likewise.
	* g++.dg/tsan/fd_close_norace.C: Likewise.
	* g++.dg/tsan/fd_close_norace2.C: Likewise.
	* g++-dg/tsan/tsan.exp: Modified to run additional C++ tests.

2013-12-12  Jakub Jelinek  <jakub@redhat.com>

	PR libgomp/59467
	* gfortran.dg/gomp/pr59467.f90: New test.
	* c-c++-common/gomp/pr59467.c: New test.

2013-12-12  Ryan Mansfield  <rmansfield@qnx.com>

	PR testsuite/59442
	* gcc.target/i386/sse2-movapd-1.c: Fix alignment attributes.
	* gcc.target/i386/sse2-movapd-2.c: Likewise.
	* gcc.target/i386/avx-vmovapd-256-1.c: Likewise.
	* gcc.target/i386/avx-vmovapd-256-2.c: Likewise.

2013-12-11  Sriraman Tallam  <tmsriram@google.com>

	PR target/59390
	* gcc.target/i386/pr59390.c: New test.
	* gcc.target/i386/pr59390_1.c: New test.
	* gcc.target/i386/pr59390_2.c: New test.

2013-12-11  Balaji V. Iyer  <balaji.v.iyer@intel.com>
